tests/test_enum/bad/quick_pattern_2.catala_en
## Article

```catala
declaration enumeration E:
  -- Case1 content integer
  -- Case2

declaration enumeration F:
  -- Case3

declaration scope A:
  context x content E
  context y content boolean
  context z content boolean

declaration scope B:
  context x content E
  context y content boolean
  context z content boolean

scope A:
  definition x equals Case1 content 2
  definition y equals x with pattern Case1
  definition z equals x with pattern Case2

scope B:
  definition x equals Case2
  definition y equals x with pattern Case3
```

```catala-test-inline
$ catala Interpret -s A
[ERROR]
Error during typechecking, incompatible types:
┌─⯈ E
└─⯈ F

Error coming from typechecking the following expression:
┌─⯈ quick_pattern_2.catala_en:28.23-28.24:
└──┐
28 │   definition y equals x with pattern Case3
   │                       ‾
   └─ Article

Type E coming from expression:
┌─⯈ quick_pattern_2.catala_en:17.21-17.22:
└──┐
17 │   context x content E
   │                     ‾
   └─ Article

Type F coming from expression:
┌─⯈ quick_pattern_2.catala_en:28.23-28.43:
└──┐
28 │   definition y equals x with pattern Case3
   │                       ‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾
   └─ Article
#return code 123#
```
